--- a/assets/css/style-about.css
+++ b/assets/css/style-about.css
@@ -10,7 +10,6 @@ Author URL: http://w3layouts.com
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
- 
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -18016,10 +18015,12 @@ ul.blog-cat li a span.fa {
   overflow: hidden;
   border-radius: 50%;
 }
+
 .text-11 .history-info {
   max-width: 100%;
   margin: 0 auto;
 }
+
 .text-11 .comments h5 {
   font-size: 18px;
   line-height: 23px;
@@ -18028,34 +18029,42 @@ ul.blog-cat li a span.fa {
   margin: 0;
   margin-bottom: 5px;
 }
+
 .text-11 .comments-grid-right ul li {
   display: inline-block;
   color: #888;
   font-size: 16px;
   vertical-align: middle;
 }
+
 .text-11 .comments-grid-right ul li a {
   font-weight: 600;
 }
+
 .text-11 .text11-content h4.heading-no-margin {
   margin: 0;
 }
+
 .text-11 .text11-content .social {
   align-self: center;
 }
+
 .text-11 img.margin-top {
   margin-top: 30px;
 }
+
 .text-11 .text11-content .social li p {
   font-size: 24px;
   color: var(--heading-color);
   font-weight: 600;
 }
+
 .text-11 .social-share-blog {
   display: grid;
   grid-auto-flow: column;
   grid-gap: 30px;
 }
+
 .text-11 .text11-content h5.quote {
   padding: 30px;
   border-left: 2px solid var(--primary-color);
@@ -18067,6 +18076,7 @@ ul.blog-cat li a span.fa {
   color: var(--heading-color);
   border-radius: var(--border-radius-full);
 }
+
 .text-list ol li {
   font-size: 18px;
   line-height: 28px;
@@ -18075,12 +18085,14 @@ ul.blog-cat li a span.fa {
   list-style-type: disc;
   font-weight: 600;
 }
+
 ul.comment {
   display: grid;
   grid-auto-flow: column;
   justify-content: space-between;
   margin-bottom: 10px;
 }
+
 .text-11 .leave-comment-form input[type="text"],
 .text-11 .leave-comment-form input[type="email"],
 .text-11 .leave-comment-form textarea {
@@ -18096,6 +18108,7 @@ ul.comment {
   border-radius: var(--border-radius);
   border: 1px solid transparent;
 }
+
 .text-11 .leave-comment-form input[type="text"]:focus,
 .text-11 .leave-comment-form input[type="email"]:focus,
 .text-11 .leave-comment-form textarea:focus {
@@ -18103,18 +18116,22 @@ ul.comment {
   border: 1px solid var(--primary-color);
   background: var(--bg-color);
 }
+
 .text-11 .comments {
   margin: 60px 0;
 }
+
 .text-11 textarea.form-control {
   height: 150px;
   font-family: inherit;
   resize: none;
 }
+
 .text-11 .features-2 .feature-main {
   padding-top: 40px;
   padding-bottom: 0px;
 }
+
 .text-11 .media {
   display: grid;
   grid-auto-flow: column;
@@ -18125,6 +18142,7 @@ ul.comment {
   padding: 30px 20px;
   border-radius: var(--border-radius);
 }
+
 .text-11 .media a.comment-img {
   left: 0px;
   top: 0px;
@@ -18133,22 +18151,28 @@ ul.comment {
   overflow: hidden;
   border-radius: 50%;
 }
+
 .text-11 .feature-main .img1 {
   padding: 20px 10px;
   border: 1px solid rgba(130, 152, 171, 0.2);
 }
+
 .text-11 .feature-main .img1:hover {
   background: #fff;
 }
+
 .text-11 .feature-main .img1 img {
   width: 35px;
 }
+
 .text-11 .features-2 .img1 h4 {
   margin-top: 10px;
 }
+
 .text11-content img {
   border-radius: var(--border-radius);
 }
+
 .text11-content .user-img {
   left: 0px;
   top: 0px;
@@ -18157,12 +18181,15 @@ ul.comment {
   overflow: hidden;
   border-radius: 50%;
 }
+
 .user-admin .user-img img {
   margin: 0 auto;
 }
+
 .text-11 .social li {
   display: inline-block;
 }
+
 .text-11 ul.social li a {
   display: inline-block;
   margin: 0;
@@ -18176,14 +18203,17 @@ ul.comment {
   border-radius: 50%;
   font-size: 15px;
 }
+
 .text-11 ul.social li span.fa {
   text-align: center;
   line-height: 40px;
 }
+
 .text-11 ul.social li a:hover {
   background-color: var(--primary-color);
   color: #fff;
 }
+
 a.blog-desc1 {
   font-size: 24px;
   color: var(--heading-color);
@@ -18192,30 +18222,37 @@ a.blog-desc1 {
   display: block;
   font-weight: 600;
 }
+
 a.blog-desc1:hover {
   color: var(--primary-color);
 }
+
 .author a {
   color: var(--heading-color);
   font-size: 18px;
 }
+
 .text-11 .card.empty-post {
   background: var(--bg-light);
   padding: 30px;
   border-radius: var(--border-radius);
 }
+
 .text-11 .card-body span.fa {
   font-size: 30px;
   color: var(--primary-color);
 }
+
 .text-11 .page-numbers {
   font-size: 20px;
   margin: 0 5px;
   font-weight: 500;
 }
+
 .text-11 .pagination li {
   margin: 0 5px;
 }
+
 .text-11 a.page-link.page-prev,
 .text-11 a.page-link.page-next {
   border: none;
@@ -18223,14 +18260,17 @@ a.blog-desc1:hover {
   line-height: 30px;
   box-shadow: none;
 }
+
 .text-11 ul.pagination {
   border-top: 1px solid var(--border-color);
   padding-top: 30px;
 }
+
 .text-11 .active a.page-link.page-number {
   background: var(--primary-color);
   color: #fff;
 }
+
 .text-11 a.page-link.page-number {
   color: var(--heading-color);
   font-weight: 500;
@@ -18244,28 +18284,34 @@ a.blog-desc1:hover {
   border: 1px solid var(--border-color);
   background-color: var(--bg-light);
 }
+
 .text-11.page-item.active .page-link.page-number,
 .text-11 .page-link.page-number:hover {
   background-color: transparent;
   color: var(--primary-color);
 }
+
 @media (max-width: 992px) {
   .text-11 .text11-content h5.quote {
     margin: 40px 0;
   }
 }
+
 @media (max-width: 736px) {
   .text-11 .text11-content h4 {
     font-size: 26px;
     line-height: 35px;
     margin-top: 30px;
   }
+
   .text-11 h3.aside-title {
     font-size: 26px;
     margin-bottom: 25px;
   }
 }
+
 @media (max-width: 568px) {
+
   .text-11 .text11-content a.next,
   .text-11 .text11-content a.prev {
     font-size: 35px !important;
@@ -18273,71 +18319,88 @@ a.blog-desc1:hover {
     margin-top: 10px;
   }
 }
+
 @media (max-width: 480px) {
   .text-11 .text11-content p {
     margin-top: 15px;
   }
+
   .text-11 .text11-content h5.quote {
     font-size: 24px !important;
     line-height: 32px;
   }
+
   .text-11 .text11-content h6 {
     font-size: 15px !important;
   }
+
   .text-11 .text11-content a.category {
     font-size: 15px !important;
     padding-left: 15px;
   }
+
   .text-11 .text11-content h5 {
     font-size: 20px !important;
     line-height: 25px;
   }
+
   .text-11 .comments {
     margin: 30px 0;
   }
+
   .text-11 .text11-content a.next,
   .text-11 .text11-content a.prev {
     font-size: 30px !important;
     line-height: 35px;
   }
+
   .media-grid.even-grid {
     margin-left: 0px;
   }
+
   .text-11 .media-body.comments-grid-right {
     padding-left: 5px;
   }
 }
+
 @media (max-width: 415px) {
   .text-11 .social-share-blog {
     grid-auto-flow: row;
     grid-gap: 15px;
   }
+
   .text-11 .text11-content .social {
     text-align: left;
   }
+
   .text-11 .text11-content h4 {
     font-size: 22px !important;
     line-height: 28px;
     margin-top: 20px;
   }
+
   ul.comment,
   .text-11 .media {
     grid-auto-flow: row;
     grid-gap: 10px;
   }
+
   .text-11 ul.social li {
     margin-right: 0px;
   }
+
   .column3 a {
     font-size: 16px !important;
   }
 }
+
 @media (max-width: 415px) {
   .text-11 ul.social li:first-child {
     display: block;
     margin-bottom: 15px;
   }
 }
+
 @media (max-width: 384px) {
   .text-11 .text11-content h5.quote {
     font-size: 20px !important;
@@ -18345,44 +18408,54 @@ a.blog-desc1:hover {
     padding: 25px;
   }
 }
+
 /* contact1 */
 .margin-up {
   margin-top: 1.5rem;
 }
+
 .contact-view {
   grid-template-columns: 1fr 1.3fr;
   grid-gap: 30px;
 }
+
 .cont-top {
   display: grid;
   grid-template-columns: 40px auto;
   grid-column-gap: 20px;
 }
+
 .twice {
   margin-bottom: 20px;
 }
+
 .cont-details h6 {
   font-size: 20px;
   color: var(--heading-color);
   font-weight: 600;
 }
+
 .cont-details p,
 .cont-details p a {
   font-size: 18px;
   line-height: 28px;
   color: var(--font-color);
 }
+
 .cont-details p a:hover {
   text-decoration: underline;
   opacity: 0.8;
   color: var(--heading-color);
 }
+
 .cont-details address {
   margin: 25px 0;
 }
+
 .cont-details address p {
   margin: 5px 0;
 }
+
 .cont-left span.fa {
   font-size: 20px;
   width: 40px;
@@ -18392,12 +18465,14 @@ a.blog-desc1:hover {
   color: #fff;
   border-radius: 50%;
 }
+
 .twice-two {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: 1fr 1fr;
   margin-bottom: 20px;
 }
+
 .map-content-9 form input,
 .map-content-9 form textarea {
   background: var(--bg-grey);
@@ -18410,16 +18485,19 @@ a.blog-desc1:hover {
   border-radius: var(--border-radius);
   height: 58px;
 }
+
 .map-content-9 h5 {
   font-size: 28px;
   line-height: 38px;
   color: var(--heading-color);
   font-weight: 600;
 }
+
 .map-content-9 form textarea {
   resize: none;
   min-height: 140px;
 }
+
 .map-content-9 form input:focus,
 .map-content-9 form textarea:focus {
   outline: none;
@@ -18427,9 +18505,11 @@ a.blog-desc1:hover {
   background: var(--bg-color);
   box-shadow: none;
 }
+
 .cont-details h6 a {
   color: var(--heading-color);
 }
+
 .map-iframe iframe {
   -webkit-filter: var(--iframe-filter);
   -moz-filter: var(--iframe-filter);
@@ -18440,44 +18520,285 @@ a.blog-desc1:hover {
   background: var(--bg-grey);
   padding: 10px;
 }
+
 /* contact1-responsive */
 @media (max-width: 992px) {
   .cont-details h5 {
     font-size: 32px !important;
     line-height: 35px;
   }
+
   .contact-view {
     grid-template-columns: 1fr;
   }
+
   .map-content-9 {
     margin-top: 20px;
   }
 }
+
 @media (max-width: 480px) {
   .twice-two {
     grid-template-columns: 1fr;
   }
+
   button.btn-contact {
     width: 100%;
   }
+
   .margin-up {
     margin-top: 1.5rem;
   }
+
   .map-content-9 h5 {
     font-size: 26px;
     line-height: 36px;
   }
 }
+
 @media (max-width: 384px) {
+
   .map-content-9 form input,
   .map-content-9 form textarea {
     height: 54px;
   }
+
   .twice-two {
     grid-gap: 12px;
     margin-bottom: 12px;
   }
+
   .twice {
     margin-bottom: 12px;
   }
+}
+.rounded
+{
+  width: 15rem;
+  height: 15rem;
+}
+
+
+.gallery {
+  --s: 120px; /* control the size */
+  --g: 10px;  /* control the gap */
+  --f: 1.5;   /* control the scale factor */
+
+  margin-bottom: 6%;
+  display: grid;
+ 
+  gap: var(--g);
+  width: 100%;
+  aspect-ratio: 1;
+  grid-template-columns: repeat(3,auto);
+}
+
+.gallery > img {
+  width: 0;
+  height: 0;
+  min-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  cursor: pointer;
+  filter: grayscale(80%);
+  transition: .35s linear;
+}
+
+.gallery img:hover{
+  filter: grayscale(0);
+  width:  calc(var(--s)*var(--f));
+  height: calc(var(--s)*var(--f));
+}
+
+
+
+/**********************<<<......TABLEEEE.....>>>******************************/
+
+
+.rwd-table {
+
+  margin: auto;
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.rwd-table tr:first-child {
+  border-top: none;
+  background: black;
+  font-size: 1.5rem;
+  color: #fff;
+}
+
+/*.rwd-table tr {
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    background-color: #f5f9fc;
+}*/
+
+.rwd-table tr:nth-child(odd):not(:first-child) {
+  background-color: #dcdee0ab;
+}
+
+.rwd-table th {
+  display: none;
+}
+
+.rwd-table td {
+  font-size: 1.2rem;
+  display: block;
+}
+
+.rwd-table td:first-child {
+  margin-top: .5em;
+}
+
+.rwd-table tr:last-child {
+  margin-bottom: .5em;
+  /*color: rgb(255, 85, 0);*/
+  border: 1px solid;
+  border-color: transparent transparent rgb(232, 145, 6) transparent;
+}
+
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 120px;
+  display: inline-block;
+  color: #000;
+}
+
+.rwd-table th,
+.rwd-table td {
+  text-align: left;
+}
+
+.rwd-table {
+  color: #333;
+  border-radius: .4em;
+  overflow: hidden;
+}
+
+.rwd-table tr {
+  border-color: #bfbfbf;
+}
+
+.rwd-table th,
+.rwd-table td {
+  padding: .5em 1em;
+}
+
+.rwd-table tr:hover:not(:first-child) {
+  background-color: #d8e7f3;
+  border-left: 2px solid #f39326;
+  border-right: 2px solid #f39326;
+}
+
+@media screen and (max-width: 601px) {
+  .rwd-table tr:nth-child(2) {
+    border-top: none;
+  }
+
+}
+
+
+
+@media screen and (min-width: 600px) {
+
+
+  .rwd-table td:before {
+    display: none;
+  }
+
+  .rwd-table th,
+  .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+
+  .rwd-table th:first-child,
+  .rwd-table td:first-child {
+    padding-left: 0;
+  }
+
+  .rwd-table th:last-child,
+  .rwd-table td:last-child {
+    padding-right: 0;
+  }
+
+  .rwd-table th,
+  .rwd-table td {
+    padding: 1em !important;
+  }
+}
+
+
+
+.container1 {
+  margin-top: 3%;
+  display: block;
+  text-align: center;
+}
+
+
+@-webkit-keyframes leftRight {
+  0% {
+    -webkit-transform: translateX(0)
+  }
+
+  25% {
+    -webkit-transform: translateX(-10px)
+  }
+
+  75% {
+    -webkit-transform: translateX(10px)
+  }
+
+  100% {
+    -webkit-transform: translateX(0)
+  }
+}
+
+@keyframes leftRight {
+  0% {
+    transform: translateX(0)
+  }
+
+  25% {
+    transform: translateX(-10px)
+  }
+
+  75% {
+    transform: translateX(10px)
+  }
+
+  100% {
+    transform: translateX(0)
+  }
+}
+
+
+
+@media only screen and (min-width:60px) and (max-width: 599px) {
+
+  /*
+    .rwd-table td {
+        background-image: -webkit-linear-gradient(left, #ff9924 137px, #f5f9fc 1px, #f5f9fc 100%);
+        background-image: -moz-linear-gradient(left, #ff9924 137px, #f5f9fc 1px, #f5f9fc 100%);
+        background-image: -o-linear-gradient(left, #ff9924 137px, #f5f9fc 1px, #f5f9fc 100%);
+        background-image: -ms-linear-gradient(left, #ff9924 137px, #f5f9fc 1px, #f5f9fc 100%);
+        background-image: linear-gradient(left, #ff9924 137px, #f5f9fc 1px, #f5f9fc 100%);
+    }
+
+    .rwd-table td:nth-child(odd) {
+        background-image: -webkit-linear-gradient(left, #ff950bb2 137px, #ebf3f9 1px, #ebf3f9 100%);
+        background-image: -moz-linear-gradient(left, #ff950bb2 137px, #ebf3f9 1px, #ebf3f9 100%);
+        background-image: -o-linear-gradient(left, #ff950bb2 137px, #ebf3f9 1px, #ebf3f9 100%);
+        background-image: -ms-linear-gradient(left, #ff950bb2 137px, #ebf3f9 1px, #ebf3f9 100%);
+        background-image: linear-gradient(left, #ff950bb2 137px, #ebf3f9 1px, #ebf3f9 100%);
+    }*/
+  tr {
+    color: rgb(255, 85, 0);
+  }
+
+
 }
